# playwriter_automation

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
output/084c8d35-2363-4eef-a411-940479298473/: hover_report.md  tldr.md
output/084c8d35-2363-4eef-a411-940479298473/behaviors/: 001_Products_menu_item.json  002_Applications_menu_item.json  003_Case_Studies_menu_item.json  004_Resources_menu_item.json  005_Company_menu_item.json  006_GET_DEMO_button.json  007_EXPLORE_button.json  008_Explore_All_Applications_button.json  009_spiderAI__product_card.json  010_iHz__product_card.json  011_Understanding_Hot_Saws_blog_post_card.json  012_The_Vibro_Motor_Challenge_blog_post_card.json  013_Contact_Us_button.json  014_Home_link.json  015_spiderAI__link.json  016_iHz__link.json  017_About_link.json  018_Blog_link.json  019_Contact_Us_link.json  020_Facebook_link.json  021_Instagram_link.json  022_Twitter_link.json  023_LinkedIn_link.json
output/084c8d35-2363-4eef-a411-940479298473/scenarios/: About_Link.feature  Blog_Link.feature  Company_Menu.feature  Contact_Us_Button.feature  Contact_Us_Link.feature  Explore_All_Applications_Button.feature  Facebook_Link.feature  Home_Link.feature  Instagram_Link.feature  LinkedIn_Link.feature  Products_Menu.feature  Resources_Menu.feature  Twitter_Link.feature  (+1 more)
output/62be67bc-d2fa-4f24-acd1-be959f7d3c7a/: hover_report.md  tldr.md
output/b0b31038-58d0-4c9a-a397-0cae492c15ed/: hover_report.md  tldr.md
src/: __init__.py  agent.py  browser.py  main.py  tools.py
tests/: __init__.py  test_browser.py  test_tools.py
(+56 files in other folders)
