[project]
name = "hover-detection-agent"
version = "0.1.0"
description = "AI-powered hover detection and BDD test generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Developer" }
]

dependencies = [
    "playwright>=1.40.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.10",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
agent = [
    "langchain-anthropic>=0.3.0",
    "deepagents>=0.1.0",
]

[project.scripts]
hover-detect = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
